# vertebral-fracture-grader

./: .gitignore  README.md  pyproject.toml
configs/: preprocessing.json  vertebra_labels.json
data_prep/: __init__.py  crop.py  dataset_registry.json  dataset_registry.py  manifest.py  manifest_template.csv  nifti_io.py  preprocessing.py  process_scan.py  visualize_crop.py
docs/: colab-data-prep.md  cropping.md  datasets.md  design.md  literature_review.md  localization.md  manifest.md  nifti-loading.md  quality-control.md  scan-processing.md
inference/: __init__.py
localization/: __init__.py  totalsegmentator_adapter.py
manifests/: verse19_manifest.csv  verse19_permanent_exclusions.csv
model/: __init__.py  dataset.py  resnet3d.py
notebooks/: 01_colab_data_prep.ipynb
requirements/: colab.txt  local-dev.txt  local-lock.txt
scripts/: create_colab_notebook.py
tests/: test_colab_notebook.py  test_crop.py  test_dataset_registry.py  test_end_to_end.py  test_manifest.py  test_model_dataset.py  test_model_resnet3d.py  test_nifti_io.py  test_preprocessing.py  test_process_scan.py  test_totalsegmentator_adapter.py  test_visualize_crop.py
